third_party/move/move-compiler-v2/tests/lambda/inline-parity/bug_10991c.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
  ┌─ tests/lambda/inline-parity/bug_10991c.move:8:21
  │
8 │         assert!(foo(|_, y, _, q| y + q,
  │                     ^^^^^^^^^^^^^^^^^^
